- General:
	- Fix packaging issue in recent releases that contain incorrect capitalisation of certain files and folders.
	- Adjust capitalization of "sounds" folders for parts to be consistent.
	- Fix memory leaks caught by KSPCF.
	- Make wheels susceptible to bullets and explosions too.
	- Fix off-centered arrow on inline radome texture  Git Issue #409
	- Re-fix lead issue on Apple Silicon.
- UI:
	- Fix exception when resetting colours in Team Icons.
	- Prevent the kill timer from showing in the Loaded Vessel Switcher window for surface vessels.
	- Updated German localization by EzBro.
- Competition:
	- Fix exception in auto-resuming tournaments when SpawnProbe.craft isn't found.
	- Fix incorrect Kill Steal attribution from 1v1 fights.
	- Abort competition if a team leader still isn't ready to engage (airborne for pilot AI) by the time the start-competition-now timer runs out.
- Spawning:
	- Wait until after vessels are unpacked before reverting the spawn camera - fixes an exception with EVA kerbals and KSPCF.
	- Fix freezing when vessel removal throws an exception.
- GameModes:
	- Space Combat Tools:
		- Better implement SpaceFriction initialization at round start.
		- Fix AI sometimes limiting to idle speed instead of max speed in space.
		- Add limits to prevent G/AoA limiter returning infinity values in space.
	- Battle Damage:
		- Add selfsealing options to Monoprop tanks.
		- Tanks using B9PartSwitcher for fuel switching now get selfsealing options.
- AI:
	- Fix incorrect inputField for off-target dynamic roll damping.
	- Fix RippleIndex Errors from weapons overheating/reloading.
	- Fix AI ignoring max missiles per target setting for GPS missiles
	- Spaceborne pilotAIs will now dodge via RCS translation.
	- Craft with guard mode enabled now automatically receive radar contacts via the datalink from friendlies if they have an onboard radar that can receive radar data (canReceiveRadarData = true in part).