@@ -6,6 +6,8 @@
 	- Make wheels susceptible to bullets and explosions too.
 	- Fix off-centered arrow on inline radome texture  Git Issue #409
 	- Re-fix lead issue on Apple Silicon.
+	- Apply the gapless particle emitter option to 'DecalGaplessParticleEmitter's too.
+	- Reduce frequency of null FX object pool entries by catching unloading events too.
 - UI:
 	- Fix exception when resetting colours in Team Icons.
 	- Prevent the kill timer from showing in the Loaded Vessel Switcher window for surface vessels.
